--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #f5f5f5;
+  --main-color: #c9c7c7;
   --black-color: #0e0e0e;
   --border: 0.1rem solid rgba(255, 255, 255, 0.371);
 }
@@ -23,6 +23,19 @@ html {
   scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar{
+  width:0.8rem;
+  background-color: white;
+}
+html::-webkit-scrollbar-track{
+  background-color: transparent;
+  border-radius: 3rem;
+}
+
+html::-webkit-scrollbar-thumb{
+  background-color: #363232;
+  border-radius: 3rem;
+}
 body {
   background-color: var(--main-color);
   height: 200;
@@ -39,8 +52,13 @@ section{
   border-radius:30rem;
   font-size:1.7rem;
   color:#fff;
-  background-color: var(--black-color);
+  background-color: #5d462c;
   cursor:pointer;
+  margin-left: 5rem;
+}
+
+.btn:hover{
+  opacity: 0.8;
 }
 .title {
   font-size: 2rem;
@@ -74,7 +92,7 @@ section{
 .header .navbar a {
   margin: 0 1rem;
   font-size: 1.6rem;
-  color: var(--black-color);
+  color: #5d462c;
   border-bottom: 0.1rem solid transparent;
 }
 
@@ -106,13 +124,62 @@ section{
 }
 .home .content h3{
   font-size:6rem;
-  color:#fff;
+  color:#5d462c;
 }
 
 .home .content p{
   font-size:2rem;
   font-weight:300;
   line-height:1.8;
+  gap:1.5rem;
   padding:1rem 0;
-  color:#ccc;
+  color:#5d462c;
+}
+
+.menu .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  border-radius: 3rem;
+}
+
+.menu .box {
+  padding: 3rem;
+  background-color: #ffffff; /* Box background color */
+  color: #5d462c; /* Text color for better readability */
+  border-radius: 3rem; /* Optional: Add rounded corners */
+  text-align: center; /* Center content */
+  min-height: 55rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+
+}
+
+.menu .box img {
+  width: 100%;
+  object-fit: cover;
+  margin-left: 2rem;
+  margin-bottom: 5rem;
+  border-radius: 1rem; /* Optional: Image corner rounding */
+}
+
+.menu h1 {
+  font-weight: 300;
+  margin-bottom: 3rem;
+  font-size: 3rem;
+  color: #e8e8e8;
+  border-bottom:0.5rem, solid #2d0404;
+}
+
+.menu h1 span {
+  color: #5d462c; /* Highlight 'Categories' in color */
+}
+
+.menu .box-container .box-head h3{
+  font-weight: 600;
+  font-size:2rem;
+  align-items: center;
+
 }
